<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>rest-examples</artifactId>
        <groupId>org.sergei</groupId>
        <version>1.0.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>model</artifactId>
    <name>REST Examples: Model</name>

    <properties>
        <suite.file>testng</suite.file>
        <thread.count>6</thread.count>
    </properties>

    <profiles>
        <profile>
            <id>dev</id>
            <!-- overrides main properties -->
            <properties>
                <suite.file>testng-dev</suite.file>
                <thread.count>2</thread.count>
            </properties>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
                <filtering>true</filtering><!-- need to inject properties from pom.xml -->
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>11</release>
                </configuration>
            </plugin>
            <!-- used to run unit tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                    <suiteXmlFiles>
                        <!-- alternative solutions -->
                        <suiteXmlFile>target/test-classes/${suite.file}.xml</suiteXmlFile>
                        <!-- properties overriding doesn't work with this tag -->
                        <!--<file>src/test/resources/${suite.file}.xml</file>-->
                    </suiteXmlFiles>
                    <properties>
                        <property>
                            <name>surefire.testng.verbose</name>
                            <value>2</value><!-- [1-10] -->
                        </property>
                        <!-- this line cause an error during build -->
                        <!--<property>
                            <name>listener</name>
                            <value>org.sergei.ThreadTestListener</value>
                        </property>-->
                    </properties>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <!--
    When mvn site is invoked, the report will automatically be included in the Project Reports menu.
    -->
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>2.22.2</version>
            </plugin>
        </plugins>
    </reporting>
</project>